--- a/성은규/1장/1장 요약.md
+++ b/성은규/1장/1장 요약.md
@@ -1,1 +1,4 @@
  # 리액트는 어쩌다 만들어졌을까?
+사용자와의 인터랙션이 자주 발생하고, 이에 따라 동적으로 UI를 표현해야 한다면, 규칙도 다양해지며 관리도 힘들어질 것이다.
+처리해야 할 이벤트도 다양해지고, 관리해야 할 상태값도 다양해지고, DOM도 다양해지게 되면 이에 따라 업데이트를 하는 규칙도 복잡해져 코드가 복잡해진다.
+![image](https://github.com/user-attachments/assets/5d175f96-6a4f-47dc-bfd1-ea81eba5e393)
