--- a/성은규/1/1.2/1.2장 요약.md
+++ b/성은규/1/1.2/1.2장 요약.md
@@ -1,9 +1,11 @@
  # 작업환경 준비
  Codesandbox도 사용 가능  
  Node.js : 자바스크립트 런타임  
- Yarn : 개선된 버전의 npm(패키지 매니저 도구 - 라이브러리 설치, 버전 관리)
- 코드 에디터 : VSCode 등
- git bash : 터미널에 입력할 때 사용
+ Yarn : 개선된 버전의 npm(패키지 매니저 도구 - 라이브러리 설치, 버전 관리)  
+ 코드 에디터 : VSCode 등  
+ git bash : 터미널에 입력할 때 사용  
  ```
 $ npx create-react-app begin-react
+$ cd begin-react
+$ npm start
 ```
