--- a/성은규/1/1.4/1.4 요약.md
+++ b/성은규/1/1.4/1.4 요약.md
@@ -6,6 +6,6 @@ return <div>안녕하세요</div>;
 이런식  
 - 태그 닫혀있어야 함
 - 두 개 이상의 태그는 무조건 하나의 태그로 감싸져있어야 한다.
-- JSX 내부에 자바스크립트 변수를 보여줘야 할 때에는 {} 으로 감싸서 보여준다. (<div>{name}</div>)
+- JSX 내부에 자바스크립트 변수를 보여줘야 할 때에는 {} 으로 감싸서 보여준다. <div>{name}</div>
 - CSS 설정 - 인라인 스타일은 객체 형태로 작성, - 로 구분되어 있는 이름들은 camelCase 형태로 네이밍
   
