--- a/성은규/1/1.17/1.17요약.md
+++ b/성은규/1/1.17/1.17요약.md
@@ -1,2 +1,5 @@
 # useMemo를 사용하여 연산한 값 재사용하기
 이전에 계산 한 값을 재사용하여 성능 최적화 가능  
+useMemo의 첫 번째 파라미터는 어떻게 연산할지 정의하는 함수,  
+두번째 파라미터에는 deps 배열을 넣어준다.  
+배열 안에 넣은 내용이 바뀌면, 등록한 함수를 호출해서 값을 연산해주고, 내용이 바뀌지 않았다면 이전에 연산한 값 재사용
