--- a/성은규/2/2.1/2.1요약.md
+++ b/성은규/2/2.1/2.1요약.md
@@ -1,1 +1,21 @@
+# Sass
+Syntactically Awesome Style Sheets : CSS pre-preocessor, 복잡한 작업을 쉽게 할 수 있게 해주고, 코드의 재활용성을 높여주며 코드의 가독성을 높여 유지보수르 쉽게 해 준다.  
+classnames 라이브러리 : 조건부 스타일링을 할 때 함수의 인자에 문자열, 배열, 객체 등을 전달하여  
+손쉽게 문자열 조합
+```
+classNames('foo', 'bar'); // => 'foo bar'
+classNames('foo', { bar: true }); // => 'foo bar'
+classNames({ 'foo-bar': true }); // => 'foo-bar'
+classNames({ 'foo-bar': false }); // => ''
+classNames({ foo: true }, { bar: true }); // => 'foo bar'
+classNames({ foo: true, bar: true }); // => 'foo bar'
+classNames(['foo', 'bar']); // => 'foo bar'
 
+// 동시에 여러개의 타입으로 받아올 수 도 있습니다.
+classNames('foo', { bar: true, duck: false }, 'baz', { quux: true }); // => 'foo bar baz quux'
+
+// false, null, 0, undefined 는 무시됩니다.
+classNames(null, false, 'bar', undefined, 0, 1, { baz: null }, ''); // => 'bar 1'
+```
+outline : 옵션. 버튼에서 테두리만 보여지도록 설정 가능  
+fullWidth : 버튼이 전체 너비를 차지하도록 구현 가능  
